// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnoPrivErc20Vault deposit can be called by whitelisted user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 86803,
}
`;

exports[`GnoPrivErc20Vault mint osToken can mint from not whitelisted user 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 177697,
}
`;

exports[`GnoPrivErc20Vault transfer can transfer to whitelisted user 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 61270,
}
`;
